# houseprices

./: .env.example  .gitignore  CLAUDE.md  MEMORY_CHALLENGES.md  Makefile  PLAN.md  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/rulesets/: protect_main.json
.github/workflows/: ci.yml
data/: SOURCES.md  anna_reference.json  anna_reference.json.example  cpi.csv
notebooks/: analysis.ipynb
output/: CHANGELOG.md  comparison.md  data.json  index.html  metadata.json  missing_districts.txt  msoa.html  msoa.js  page.css  page.js  price_per_sqm_lsoa.csv  price_per_sqm_msoa.csv  price_per_sqm_postcode_district.csv  price_per_sqm_yearly_postcode_district.csv  shared.js  yearly_totals.json
research/: bin-chi-epc-ppd-matching.md  cpi-deflator-choice.md  district-gap-vs-anna.md  epc-api-migration.md  epc-csv-data-quality.md  issue-property-type-segmentation.md  ons-boundary-format.md  ons-postcode-boundary-service-retired.md  postcode-boundary-sources.md  sale-epc-temporal-matching.md  ubdc-ppd-uprn-lookup.md  uprn-coverage-in-epc-data.md
scripts/: build_msoa_page.py  build_page.py  dev_server.py  fetch_anna_reference.py  fetch_boundaries.py  msoa.js  msoa_template.html  page.css  page.js  page_template.html  prepare_boundaries.py
src/houseprices/: download.py  pipeline.py  spatial.py
tests/: test_build_msoa_page.py  test_build_page.py  test_cpi.py  test_download.py  test_pipeline.py  test_prepare_boundaries.py  test_runner.py  test_spatial.py
tests/fixtures/: README.md  cpi_sample.csv  epc_backslash_quotes.csv  epc_quoted_newline.csv  (+14 more)
